# customQuickControl

./: BottomDrawer.qml  CMakeLists.txt  LabDelegate.qml  Main.qml  Resources.qrc  RightSideDrawerDelegate.qml  ShadowRectangle.qml  main.cpp  qmldir
Custom/: CMakeLists.txt  IconLabel.qml  LabDelegate.qml  OutlinedLabel.qml  PrefsLabelSelector.qml  PrefsTabButton.qml  ShadowRectangle.qml  Style.qml  qmldir
